lesson1/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lesson1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lesson1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lesson1
    spec:
      containers:
        - name: lesson1
          image: spomprt/demo:latest
          ports:
            - containerPort: 8000
