lesson1/k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: lesson1
  labels:
    app: lesson1
spec:
  containers:
    - name: lesson1
      image: spomprt/demo:latest
      ports:
        - containerPort: 8000
