lesson1/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lesson1
spec:
  type: NodePort
  selector:
    app: lesson1
  ports:
    - protocol: TCP
      port: 8000
      targetPort: lesson1
      name: lesson1-port
