lesson1/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lesson1
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "arch.homework"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: lesson1
                port:
                  number: 80
